--- a/views/main.css
+++ b/views/main.css
@@ -164,8 +164,9 @@ hr {
     margin: 36px 0;
 }
 .container {
-    max-width: 950px;
-    margin: 48px auto;
+    width: 90vw;
+    max-width: 1500px;
+    margin: 0 auto;
     background: #fff;
     border-radius: 24px;
     box-shadow: 0 4px 32px #f9e7d7;
